Add game board UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <p>hello</p>
+    <div class="gameboard">
+        <div class="row-top col-left"></div>
+        <div class="row-top col-center"></div>
+        <div class="row-top col-right"></div>
+        <div class="row-middle col-left"></div>
+        <div class="row-middle col-center"></div>
+        <div class="row-middle col-right"></div>
+        <div class="row-bottom col-left"></div>
+        <div class="row-bottom col-center"></div>
+        <div class="row-bottom col-right"></div>
+    </div>
 </body>
 </html>
