--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="player-info" id="playerone">
+        <h2>Player 1</h2>
+        <label for="playerone-name">Your Name</label>
+        <input type="text" id="playerone-name">
+        <p>You are X's</p>
+    </div>
     <div class="gameboard">
         <div class="row-top col-left"></div>
         <div class="row-top col-center"></div>
@@ -18,6 +24,12 @@
         <div class="row-bottom col-left"></div>
         <div class="row-bottom col-center"></div>
         <div class="row-bottom col-right"></div>
+    </div>
+    <div class="player-info playertwo" id="playertwo">
+        <h2>Player 2</h2>
+        <label for="playertwo-name">Your Name</label>
+        <input type="text" id="playertwo-name">
+        <p>You are O's</p>
     </div>
 </body>
 </html>
